--- a/OnSale.Prism/OnSale.Prism.iOS/OnSale.Prism.iOS.csproj
+++ b/OnSale.Prism/OnSale.Prism.iOS/OnSale.Prism.iOS.csproj
@@ -201,6 +201,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator">
       <Version>18.4.0.41</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfRotator">
+      <Version>18.4.0.41</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
