--- a/OnSale.Prism/OnSale.Prism.iOS/OnSale.Prism.iOS.csproj
+++ b/OnSale.Prism/OnSale.Prism.iOS/OnSale.Prism.iOS.csproj
@@ -198,6 +198,12 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator">
+      <Version>18.4.0.41</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfRotator">
+      <Version>18.4.0.41</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
