--- a/OnSale.Prism/OnSale.Prism.Android/OnSale.Prism.Android.csproj
+++ b/OnSale.Prism/OnSale.Prism.Android/OnSale.Prism.Android.csproj
@@ -65,6 +65,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.Core">
+      <Version>18.4.0.41</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator">
       <Version>18.4.0.41</Version>
     </PackageReference>
