--- a/OnSale.Prism/OnSale.Prism.iOS/OnSale.Prism.iOS.csproj
+++ b/OnSale.Prism/OnSale.Prism.iOS/OnSale.Prism.iOS.csproj
@@ -199,6 +199,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.Core">
+      <Version>18.4.0.41</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator">
       <Version>18.4.0.41</Version>
     </PackageReference>
